--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    
+    <h3><a href="recipes/egg_fried_rice.html">Egg Fried Rice</a></h3>
+
 </body>
 </html>
