../images/popcornchix.jpg

--- a/recipes/egg_fried_rice.html
+++ b/recipes/egg_fried_rice.html
@@ -6,16 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><center>Fried Rice and Egg</center></h1>
-
-    <div style="text-align: center;">
+    <h1>Fried Rice and Egg</h1>
     
-    <img width="500" src="../images/friedrice.jpg"
+    <img width="500" src="../images/friedrice.jpg">
 
-    </div>
     <h3>A quick and easy yet delicious fried rice and egg recipe.</h3>
 
     <p>This recipe is simple and satisfies the whole family.</p>
-    <h4>Ingredients</h4>
+    
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Day old refrigerated rice</li>
+        <li>Eggs</li>
+        <li>Soy Sauce</li>
+        <li>Green Onion</li>
+        <li>Garlic Powder</li>
+        <li>Salt</li>
+        <li>Olive Oil</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Crack your eggs into a bowl, whisk until you see air bubbles and set aside.</li>
+        <li>Pour oil into a frying pan and set to medium heat.</li>
+        <li>While we wait for the oil to heat, lightly salt the eggs.</li>
+        <li>Once oil is hot, pour in your eggs and season with garlic powder.</li>
+        <li>Once eggs are cooked but slightly runny, set aside.</li>
+        <li>Pour your rice into the frying pan, spread and flatten the rice to develop a crust on the bottom</li>
+        <li>Once you have a nice crust on the bottom pour some soy sauce into the rice and stir.</li>
+        <li>Turn off the heat, set pan aside, add the eggs again and stir.</li>
+        <li>Garnish with green onion and serve.</li>
+    </ol>
 </body>
 </html>
