--- a/recipes/popcornchix.html
+++ b/recipes/popcornchix.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/egg_fried_rice.html">Egg Fried Rice</a></li>
-    <li><a href="recipes/popcornchix.html">Popcorn Chicken</a></li>
-    </ul>
+    <h1>Popcorn Chicken</h1>
+    
+    <img width="500" src="../images/popcornchix.jpg">
 </body>
 </html>
